--- a/app/views/blogs/ap_polycet_results.html.erb
+++ b/app/views/blogs/ap_polycet_results.html.erb
@@ -17,7 +17,7 @@ input[type=text] {
 <script>
 var myVar;
 function myFunction() {
-    document.getElementById('demo').innerHTML="Results are not released yet, please try after some time..."
+    document.getElementById('demo').innerHTML="Results are not released yet, Please try after some time..."
     // window.open("http://ap-ssc-result.indiaresults.com/ap/bseap/class-10-exam-result-2017/query.htm");
     setInterval(alertFunc, 4000);
 
@@ -56,6 +56,7 @@ function myFunction() {
 
 <div id="box" class="text-center"><br>
 <h3 class="text-center">POLYCET 2017</h3><hr style="height:1px;border:none;color:#333;background-color:#333";>
+<p class="text-center text-danger"><b><span id="demo"></span></b></p>
 <span ><b>Enter APPOLYCET-2017 Hall Ticket No.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="hallticket"></b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button onclick="myFunction()">View Rank Card</button></span>
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- school9edu_main_Blog1_1x1_as -->
@@ -67,8 +68,6 @@ function myFunction() {
                     <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
-                    <br>
-<p class="text-center text-danger"><b><span id="demo"></span></b></p>
  </div>
  <br>
 
