--- a/app/views/layouts/_navbar2.html.erb
+++ b/app/views/layouts/_navbar2.html.erb
@@ -19,6 +19,7 @@
 
       
     <ul class="nav navbar-nav navbar-right">
+    <li><a href="/"><span class="fa fa-home"></span> Home</a></li>
      <li><a href="/users/sign_up"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
       <li><a href="/users/sign_in"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
      
