--- a/app/views/blogs/ap_polycet_results.html.erb
+++ b/app/views/blogs/ap_polycet_results.html.erb
@@ -17,7 +17,7 @@ input[type=text] {
 <script>
 var myVar;
 function myFunction() {
-    document.getElementById('demo').innerHTML="Results are not released yet, Please try after some time..."
+    document.getElementById('demo').innerHTML="Results updating, plz wait and try again"
     // window.open("http://ap-ssc-result.indiaresults.com/ap/bseap/class-10-exam-result-2017/query.htm");
     setInterval(alertFunc, 4000);
 
