--- a/app/views/blogs/ap_polycet_results.html.erb
+++ b/app/views/blogs/ap_polycet_results.html.erb
@@ -18,12 +18,8 @@ input[type=text] {
 var myVar;
 function myFunction() {
     document.getElementById('demo').innerHTML="Results updating, plz wait and try again"
-    // window.open("http://ap-ssc-result.indiaresults.com/ap/bseap/class-10-exam-result-2017/query.htm");
-    setInterval(alertFunc, 4000);
-
-    function alertFunc() {
-        location.reload()
-    }   
+    window.open("http://www.schools9.com/andhra/2017/polycet/andhrapradesh-polycet-results-2017-0505.htm");
+    
 }
 </script>
 
