--- a/app/views/blogs/ap_polycet_results.html.erb
+++ b/app/views/blogs/ap_polycet_results.html.erb
@@ -17,8 +17,9 @@ input[type=text] {
 <script>
 var myVar;
 function myFunction() {
-    document.getElementById('demo').innerHTML="Results updating, plz wait and try again"
+    // document.getElementById('demo').innerHTML="Results updating, plz wait and try again"
     window.open("http://www.schools9.com/andhra/2017/polycet/andhrapradesh-polycet-results-2017-0505.htm");
+    location.reload()
     
 }
 </script>
