--- a/app/views/blogs/adminmain.html.erb
+++ b/app/views/blogs/adminmain.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "NEET" %>
+<% content_for :title, "NEET RESULTS 2017" %>
 <% content_for :description, "Neet Providing All india Educations Updates, Notifications, Time tables, Results, Online test and much more. Neet gov is providing genuine and fast updates like manabadi, schools9 and india results ."%>
 <% content_for :keywords, "Neet #{Time.now.year}, free online bits, sbtet, manabadi, schools9, 10th results, neet results, neet updates, jobs"%>
 <% content_for :time, "2017-05-06T14:50:00+05:30" %>
