ap_ecet_results

--- a/app/views/blogs/ap_ecet_results.html.erb
+++ b/app/views/blogs/ap_ecet_results.html.erb
@@ -1,5 +1,5 @@
-<% content_for :title, "AP ECET 2017 RESULTS @ Manabadi | www.sche.ap.gov.in/ECET" %>
-<% content_for :description, "AP ECET 2017 RESULTS @ Manabadi | www.sche.ap.gov.in/ECET"%>
+<% content_for :title, "AP ECET 2017 RESULTS @ Manabadi | ecet.tsche.ac.inT" %>
+<% content_for :description, "AP ECET 2017 RESULTS @ Manabadi | ecet.tsche.ac.in"%>
 <% content_for :time, "2017-05-15T10:50:00+05:30" %>
 
 <style type="text/css">
@@ -72,7 +72,7 @@ function myFunction() {
  <br>
 
 </table>
-<h3 class="text-center">AP ECET 2017 RESULTS @ Manabadi | www.sche.ap.gov.in</h3>
+<h3 class="text-center">AP ECET 2017 RESULTS @ Manabadi | ecet.tsche.ac.in</h3>
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <ins class="adsbygoogle"
                      style="display:block"
