ap_ecet_results

--- a/app/views/blogs/ts_ecet_results.html.erb
+++ b/app/views/blogs/ts_ecet_results.html.erb
@@ -1,5 +1,5 @@
-<% content_for :title, "AP ECET 2017 RESULTS @ Manabadi | sche.ap.gov.in" %>
-<% content_for :description, "AP ECET 2017 RESULTS @ Manabadi | sche.ap.gov.in"%>
+<% content_for :title, "TS ECET 2017 RESULTS @ Manabadi | ecet.tsche.ac.in" %>
+<% content_for :description, "TS ECET 2017 RESULTS @ Manabadi | ecet.tsche.ac.in"%>
 <% content_for :time, "2017-05-15T10:50:00+05:30" %>
 
 <style type="text/css">
@@ -17,9 +17,9 @@ input[type=text] {
 <script>
 var myVar;
 function myFunction() {
-    document.getElementById('demo').innerHTML="ECET 2017 Results @ 4PM"
+    document.getElementById('demo').innerHTML="RESULTS AVAILABLE SOON STAY TUNE WITH US AND TRY AGAIN"
     // window.open("http://www.schools9.com/andhra/2017/polycet/andhrapradesh-polycet-results-2017-0505.htm");
-   myVar = setInterval(time, 3000);
+    myVar=setInterval(time, 3000);
     function time(){
         location.reload()
     }
@@ -35,29 +35,29 @@ function myFunction() {
 <div class="social-share">
     <h4>Share on</h4>
     
-            <a class="btn btn-info" href="https://twitter.com/intent/tweet?text=http://www.neetgov.in/ap-ecet-results" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-twitter"></i><span> Twitter</span></a>
+            <a class="btn btn-info" href="https://twitter.com/intent/tweet?text=http://www.neetgov.in/ts-ecet-results" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-twitter"></i><span> Twitter</span></a>
        
-            <a class="btn btn-success" href="https://www.facebook.com/sharer/sharer.php?u=http://www.neetgov.in/ap-ecet-results& t=AP-ECET-RESULTS-2017" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-facebook"></i><span> Facebook</span></a>
+            <a class="btn btn-success" href="https://www.facebook.com/sharer/sharer.php?u=http://www.neetgov.in/ts-ecet-results& t=TS-ECET-RESULTS-2017" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-facebook"></i><span> Facebook</span></a>
 
-            <a class="btn btn-danger" href="https://plus.google.com/share?url=http://www.neetgov.in/ap-ecet-results"  class="google-plus" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-google-plus"></i><span> Google+</span></a>
+            <a class="btn btn-danger" href="https://plus.google.com/share?url=http://www.neetgov.in/ts-ecet-results"  class="google-plus" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-google-plus"></i><span> Google+</span></a>
 
-            <a class="btn btn-success" href="whatsapp://send?text=http://www.neetgov.in/ap-ecet-results" class="whatsapp" title="Share on WhatsApp" data-action="share/whatsapp/share" target='_blank'><i class="fa fa-whatsapp"></i><span> Whatsapp</span></a>
+            <a class="btn btn-success" href="whatsapp://send?text=http://www.neetgov.in/ts-ecet-results" class="whatsapp" title="Share on WhatsApp" data-action="share/whatsapp/share" target='_blank'><i class="fa fa-whatsapp"></i><span> Whatsapp</span></a>
 </div>
 <!-- /.social-share -->
 <br><br>
 
 
 <div class="text-center">
-<h1>AP ECET RESULTS 2017</h1>
+<h1>TS ECET RESULTS 2017</h1>
 </div>
-<h2 class="text-success">Are you Searching for the  AP ECET RESULTS 2017? Yes means can check the  AP ECET 2017 Results by Hall ticket.</h2>
+<h2 class="text-success">Are you Searching for the  TS ECET RESULTS 2017? Yes means can check the  TS ECET 2017 Results by Hall ticket.</h2>
 
-<p><b>AP ECET Results 2017 :</b> Engineering Common Entrance Test (AP ECET ) has Conducted by JAWAHARLAL NEHRU TECHNOLOGICAL UNIVERSITY, ANANTHAPUR on behalf of APSCHE. Students who are waiting for AP ECET exam results 2017. Today, SCHE AP & JNTU Anantapur decided to release the Andhra Pradesh ECET 2017 Results on 4 pm, 15th MAY 2017</p><br>
+<p><b>TS ECET Results 2017 :</b> Engineering Common Entrance Test (TS ECET ) has Conducted by JAWAHARLAL NEHRU TECHNOLOGICAL UNIVERSITY, HYDERABAD on behalf of TSSCHE. Students who are waiting for TS ECET exam results 2017. Today, SCHE TS & JNTU Hyderabad decided to release the Telangana ECET 2017 Results 15th MAY 2017</p><br>
 
 <div id="box" class="text-center"><br>
 <h3 class="text-center">ECET 2017</h3><hr style="height:1px;border:none;color:#333;background-color:#333";>
 <p class="text-center text-danger"><b><span id="demo"></span></b></p>
-<span ><b>Enter APECET-2017 Hall Ticket No.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="hallticket"></b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button onclick="myFunction()">Get Results</button></span>
+<span ><b>Enter TSECET-2017 Hall Ticket No.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="hallticket"></b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button onclick="myFunction()">Get Results</button></span>
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- school9edu_main_Blog1_1x1_as -->
                     <ins class="adsbygoogle"
@@ -72,7 +72,7 @@ function myFunction() {
  <br>
 
 </table>
-<h3 class="text-center">AP ECET 2017 RESULTS @ Manabadi | ecet.tsche.ac.in</h3>
+<h3 class="text-center">TS ECET 2017 RESULTS @ Manabadi | ecet.tsche.ac.in</h3>
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <ins class="adsbygoogle"
                      style="display:block"
@@ -85,9 +85,9 @@ function myFunction() {
 
 <p>So, The Students who waiting for Andhra Pradesh ECET 2017 Results will get in few Hours. We requesting to Ecet 2017 Candidates keep visiting this web page and get your Ecet 2017 Exam result and The Students who wants Know Her/she Results can now follow the below steps.</p>
 <br>
-<h4>Steps to get AP ECET Result 2017</h4>
+<h4>Steps to get TS ECET Result 2017</h4>
 <ul>
-<li>Go to the official website www.sche.ap.gov.in/ECET Find the link “ APECET Results 2017 ” and 
+<li>Go to the official website www.sche.ap.gov.in/ECET Find the link “ TSECET Results 2017 ” and 
 
 Click on it. Select your Branch and Enter the Hall Ticket Number.</li>
 
@@ -99,11 +99,11 @@ Click on it. Select your Branch and Enter the Hall Ticket Number.</li>
 </ul>
 <br>
 <!-- <p><b>AP POLYCET</b> Entrance exam results are declared at polycetap.nic.in. Results AP POLYCET 2017 Declared Will Be soon Today evening 5:30pm (08-05-2017) stay tune with us get your Polycet results 2017</p> -->
-<h4 class="text-center">Check Below Link For Information AP ECET 2017</h4>
+<h4 class="text-center">Check Below Link For Information TS ECET 2017</h4>
 
 <h4 class="text-center">
 <!-- <a href="https://polycetts.nic.in/" target="_blank">AP POLYCET 2017 RESULTS</a></h4> -->
-<a href="#" target="_blank">AP ECET 2017 RESULTS</a>
+<a href="#" target="_blank">TS ECET 2017 RESULTS</a>
 </h4>
 
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -125,15 +125,15 @@ Click on it. Select your Branch and Enter the Hall Ticket Number.</li>
 <div class="text-success">
 <h5>
 <ul>
-    <li>ap ecet results 2017</li>
+    <li>ts ecet results 2017</li>
     <li>ecet manabadi results 2017</li>
-    <li>andhra pradesh ecet results 2017</li>
+    <li>telangana ecet results 2017</li>
     <li>manabadi ecet results 2017</li>
     <li>ecet 2017 results</li>
     <li>ecet results 2017 ts</li>
-    <li>ap ecet rank cards avaliable now</li>
-    <li>ap ecet exam results</li>
-    <li>ap ecet 2017 results </li>
+    <li>ts ecet rank cards avaliable now</li>
+    <li>ts ecet exam results</li>
+    <li>ts ecet 2017 results </li>
 </ul>
 </h5>
 
