--- a/app/views/blogs/ap_ecet_results.html.erb
+++ b/app/views/blogs/ap_ecet_results.html.erb
@@ -72,7 +72,7 @@ function myFunction() {
  <br>
 
 </table>
-<h3 class="text-center">AP ECET 2017 RESULTS @ Manabadi | ecet.tsche.ac.in</h3>
+<h3 class="text-center">AP ECET 2017 RESULTS @ Manabadi | sche.ap.gov.in</h3>
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <ins class="adsbygoogle"
                      style="display:block"
