ap_ecet_results

--- a/app/views/blogs/ap_ecet_results.html.erb
+++ b/app/views/blogs/ap_ecet_results.html.erb
@@ -55,7 +55,7 @@ function myFunction() {
 <p><b>AP ECET Results 2017 :</b> Engineering Common Entrance Test (AP ECET ) has Conducted by JAWAHARLAL NEHRU TECHNOLOGICAL UNIVERSITY, ANANTHAPUR on behalf of APSCHE. Students who are waiting for AP ECET exam results 2017. Today, SCHE AP & JNTU Anantapur decided to release the Andhra Pradesh ECET 2017 Results on 4 pm, 15th MAY 2017</p><br>
 
 <div id="box" class="text-center"><br>
-<h3 class="text-center">ECET 2017</h3><hr style="height:1px;border:none;color:#333;background-color:#333";>
+<h3 class="text-center">AP ECET 2017</h3><hr style="height:1px;border:none;color:#333;background-color:#333";>
 <p class="text-center text-danger"><b><span id="demo"></span></b></p>
 <span ><b>Enter APECET-2017 Hall Ticket No.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="hallticket"></b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button onclick="myFunction()">Get Results</button></span>
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -68,6 +68,7 @@ function myFunction() {
                     <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
+<a href="/ts-ecet-results"><h3>TS ECET RESULTS</h3></a>
  </div>
  <br>
 
