--- a/app/views/blogs/ts_ecet_results.html.erb
+++ b/app/views/blogs/ts_ecet_results.html.erb
@@ -55,7 +55,7 @@ function myFunction() {
 <p><b>TS ECET Results 2017 :</b> Engineering Common Entrance Test (TS ECET ) has Conducted by JAWAHARLAL NEHRU TECHNOLOGICAL UNIVERSITY, HYDERABAD on behalf of TSSCHE. Students who are waiting for TS ECET exam results 2017. Today, SCHE TS & JNTU Hyderabad decided to release the Telangana ECET 2017 Results 15th MAY 2017</p><br>
 
 <div id="box" class="text-center"><br>
-<h3 class="text-center">ECET 2017</h3><hr style="height:1px;border:none;color:#333;background-color:#333";>
+<h3 class="text-center">TS ECET 2017</h3><hr style="height:1px;border:none;color:#333;background-color:#333";>
 <p class="text-center text-danger"><b><span id="demo"></span></b></p>
 <span ><b>Enter TSECET-2017 Hall Ticket No.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="hallticket"></b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button onclick="myFunction()">Get Results</button></span>
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -68,7 +68,7 @@ function myFunction() {
                     <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
-<a href="/ap-ecet-results">
+<a href="/ap-ecet-results"><h3>AP ECET RESULTS</h3></a>
  </div>
  <br>
 
