ap_ecet_results

--- a/app/views/blogs/ap_ecet_results.html.erb
+++ b/app/views/blogs/ap_ecet_results.html.erb
@@ -18,11 +18,11 @@ input[type=text] {
 var myVar;
 function myFunction() {
     document.getElementById('demo').innerHTML="ECET 2017 Results Updating, Please wait..."
-    // window.open("http://www.schools9.com/andhra/2017/polycet/andhrapradesh-polycet-results-2017-0505.htm");
-   myVar = setInterval(time, 3000);
-    function time(){
-        location.reload()
-    }
+    window.open("http://www.results.manabadi.co.in/2017/andhra-pradesh/ecet/andhra-pradesh-ecet-results-2017-1205.htm");
+   // myVar = setInterval(time, 3000);
+   //  function time(){
+   //      location.reload()
+   //  }
     
 }
 </script>
