--- a/app/views/blogs/ts_ecet_results.html.erb
+++ b/app/views/blogs/ts_ecet_results.html.erb
@@ -52,7 +52,7 @@ function myFunction() {
 </div>
 <h2 class="text-success">Are you Searching for the  TS ECET RESULTS 2017? Yes means can check the  TS ECET 2017 Results by Hall ticket.</h2>
 
-<p><b>TS ECET Results 2017 :</b> Engineering Common Entrance Test (TS ECET ) has Conducted by JAWAHARLAL NEHRU TECHNOLOGICAL UNIVERSITY, HYDERABAD on behalf of TSSCHE. Students who are waiting for TS ECET exam results 2017. Today, SCHE TS & JNTU Hyderabad decided to release the Telangana ECET 2017 Results 15th MAY 2017</p><br>
+<p><b>TS ECET Results 2017 :</b> Engineering Common Entrance Test (TS ECET ) has Conducted by JAWAHARLAL NEHRU TECHNOLOGICAL UNIVERSITY, HYDERABAD on behalf of TSSCHE. Students who are waiting for TS ECET exam results 2017. Today, SCHE TS & JNTU Hyderabad decided to release the Telangana ECET 2017 Results 20 MAY 2017</p><br>
 
 <div id="box" class="text-center"><br>
 <h3 class="text-center">TS ECET 2017</h3><hr style="height:1px;border:none;color:#333;background-color:#333";>
