--- a/app/views/blogs/ap_ecet_results.html.erb
+++ b/app/views/blogs/ap_ecet_results.html.erb
@@ -18,7 +18,7 @@ input[type=text] {
 var myVar;
 function myFunction() {
     document.getElementById('demo').innerHTML="ECET 2017 Results Updating, Please wait..."
-    window.open("http://schools9.com/andhra/2017/ECET/andhra-pradesh-ecet-results-2017-1505.htm");
+    window.open("http://sche.ap.gov.in/ECET/ECET/ECET_Result_2017.aspx");
    // myVar = setInterval(time, 3000);
    //  function time(){
    //      location.reload()
