--- a/app/views/blogs/adminmain.html.erb
+++ b/app/views/blogs/adminmain.html.erb
@@ -43,8 +43,8 @@
             <div class="panel-body">
               
                <ul>
-                  <li><a href="#">AP ECET RESULTS 2017 @ MANABADI | sche.ap.gov.in</a></li><br>
-                  <li><a href="#">TS ECET RESULTS 2017 @ MANABADI | ecet.tsche.ac.in</a></li><br>
+
+               <li><a href="/cbse-results">CBSE Results 2017 | Central Board of Secondary Education Results 2017</a></li><br>
 
                   <li><a href="/ap-apsbtet-results">AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></li><br>
 
