--- a/app/views/blogs/cbse.html.erb
+++ b/app/views/blogs/cbse.html.erb
@@ -1,5 +1,5 @@
-<% content_for :title, "NEET Results 2017 @ Manabadi | ecet.tsche.ac.in" %>
-<% content_for :description, "NEET Results 2017 @ Manabadi | ecet.tsche.ac.in"%>
+<% content_for :title, "NEET Results 2017 @ Manabadi | cbseneet.nic.in" %>
+<% content_for :description, "NEET Results 2017 @ Manabadi | cbseneet.nic.in"%>
 <% content_for :time, "2017-05-17T10:50:00+05:30" %>
 
 <style type="text/css">
@@ -73,7 +73,7 @@ function myFunction() {
  <br>
 
 </table>
-<h3 class="text-center">NEET 2017 WEBSITE : cbseneet.nic.in </h3>
+<h3 class="text-center text-success">NEET 2017 WEBSITE : cbseneet.nic.in </h3>
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <ins class="adsbygoogle"
                      style="display:block"
@@ -107,7 +107,7 @@ NEET Results 2017: The Central Board of Secondary Education (CBSE) has announced
 
 <h4 class="text-center">
 <!-- <a href="https://polycetts.nic.in/" target="_blank">AP POLYCET 2017 RESULTS</a></h4> -->
-<a href="#" target="_blank">NEET Results 2017</a>
+<a href="#">NEET Results 2017</a>
 </h4>
 
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
