--- a/app/views/blogs/cbse.html.erb
+++ b/app/views/blogs/cbse.html.erb
@@ -48,7 +48,7 @@ function myFunction() {
 
 
 <div class="text-center">
-<h1>CBSE RESULTS 2017</h1>
+<h1>NEET RESULTS 2017</h1>
 </div>
 
 
@@ -91,6 +91,40 @@ NEET Results 2017: The Central Board of Secondary Education (CBSE) has announced
 <p>The NEET (UG)-2017 will be conducted on Sunday, the 7th May, 2017. The responsibility of the CBSE is limited to the conduct of the entrance examination, declaration of result and providing All India Rank to the Directorate General Health Services, Government of India for the conduct of counselling for 15% All India Quota Seats and for supplying the result to state/other Counselling Authorities.</p>
 
 <br>
+<div class="text-center">	
+<h2>NEET 2017 INFORMATION</h2>
+<style>
+
+
+table, td, th {
+    border: 2px solid black;
+}
+td {
+	width:10%;
+}
+</style>
+<table>
+	<tr>
+		<td>NEET 2017 Exam</td>
+		<td>May 7, 2017</td>
+	</tr>
+	<tr>
+		<td>NEET 2017 Answer Keys (official):</td>
+		<td>Last week of May</td>
+	</tr>
+
+	<tr>
+		<td>2017NEET 2017 Result:</td>
+		<td>June 8, 2017</td>
+	</tr>
+	<tr>
+		<td>NEET 2017 Counselling:</td>
+		<td>June, 2017</td>
+	</tr>
+
+</table>
+</div>
+<br>
 <h4>Steps to check the NEET 2017 results</h4>
 <ul>
 <li>Go To official website</li>
@@ -103,7 +137,7 @@ NEET Results 2017: The Central Board of Secondary Education (CBSE) has announced
 </ul>
 <br>
 <!-- <p><b>AP POLYCET</b> Entrance exam results are declared at polycetap.nic.in. Results AP POLYCET 2017 Declared Will Be soon Today evening 5:30pm (08-05-2017) stay tune with us get your Polycet results 2017</p> -->
-<h4 class="text-center">Check Below Link For Information CBSE 2017</h4>
+<h4 class="text-center">Check Below Link For Information NEET 2017</h4>
 
 <h4 class="text-center">
 <!-- <a href="https://polycetts.nic.in/" target="_blank">AP POLYCET 2017 RESULTS</a></h4> -->
