--- a/app/views/blogs/adminmain.html.erb
+++ b/app/views/blogs/adminmain.html.erb
@@ -44,7 +44,7 @@
               
                <ul>
 
-               <li><a href="/cbse-results">CBSE Results 2017 | Central Board of Secondary Education Results 2017</a></li><br>
+               <li><a href="/cbse-results">NEET Results 2017 | NATIONAL ELIGIBILITY CUM ENTRANCE TEST RESULTS 2017</a></li><br>
 
                   <li><a href="/ap-apsbtet-results">AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></li><br>
 
