--- a/app/views/blogs/adminmain.html.erb
+++ b/app/views/blogs/adminmain.html.erb
@@ -7,7 +7,7 @@
 
  <div class="panel" style="padding-left: 6%; padding-right: 6%; padding-top:2%; padding-bottom: 2%">
  <div class="row">
- <h2 class="text-center">Welcome to neetgov.in</h2>
+ <h1 class="text-center">Welcome to neetgov.in</h1><br>
  <p><b>Neetgov</b> provides all India entrance exam updates like notifications, results, important dates and other all India educational updates. <b>Neetgov</b> provides all latest and genuine updates portal. <b>Neet gov</b> also provides especially all India entrance free online test exams through computer based. </p>
  <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <ins class="adsbygoogle"
