--- a/app/views/blogs/adminmain.html.erb
+++ b/app/views/blogs/adminmain.html.erb
@@ -43,6 +43,7 @@
             <div class="panel-body">
               
                <ul>
+                <li><a href="/tn-sslc-results">Tamil Nadu SSLC Results 2017 | TN SSLC Results 2017 @ tnresults.nic.in<img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></li><br>
 
                <li><a href="/neet-results">NEET Results 2017 | NATIONAL ELIGIBILITY CUM ENTRANCE TEST RESULTS 2017<img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></li><br>
 
