--- a/app/views/blogs/tnsslc.html.erb
+++ b/app/views/blogs/tnsslc.html.erb
@@ -10,14 +10,14 @@ outline-offset: -9px;
 input[type=text] {
    
     background-color:#87CEFA;
-    color: white;
+    color: black;
 }
 </style>
 
 <script>
 var myVar;
 function myFunction() {
-    document.getElementById('demo').innerHTML="RESULTS AVAILABLE SOON STAY TUNE WITH US AND TRY AGAIN"
+    document.getElementById('demo').innerHTML="Tamil Nadu SSLC March 2017 Examination Results expected on 19th May 2017 at 10:00 Hrs"
     // window.open("http://www.schools9.com/andhra/2017/polycet/andhrapradesh-polycet-results-2017-0505.htm");
     myVar=setInterval(time, 3000);
     function time(){
@@ -56,10 +56,10 @@ function myFunction() {
 <br><br>
 Tamil Nadu SSLC March 2017 Examination Results expected on 19th May 2017 at 10:00 Hrs. The results will be published in the official website of Tamil Nadu school education department and the results website of Directorate of Government Examinations, Government of Tamil Nadu.</p><br>
 
-<!-- <div id="box" class="text-center"><br>
-<h3 class="text-center">TS ECET 2017</h3><hr style="height:1px;border:none;color:#333;background-color:#333";>
+<div id="box" class="text-center"><br>
+<h3 class="text-center">TN SSLC RESULTS 2017</h3><hr style="height:1px;border:none;color:#333;background-color:#333";>
 <p class="text-center text-danger"><b><span id="demo"></span></b></p>
-<span ><b>Enter TSECET-2017 Hall Ticket No.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="hallticket"></b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button onclick="myFunction()">Get Results</button></span> -->
+<span ><b>Enter TN SSLC-2017 Hall Ticket No.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="hallticket"></b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button onclick="myFunction()">Get Results</button></span>
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- school9edu_main_Blog1_1x1_as -->
                     <ins class="adsbygoogle"
@@ -71,7 +71,7 @@ Tamil Nadu SSLC March 2017 Examination Results expected on 19th May 2017 at 10:0
                     (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
 
- <!-- </div> -->
+ </div>
  <br>
 
 </table>
@@ -114,7 +114,7 @@ td {
 
 	<tr>
 		<td>Status</td>
-		<td>Tamil Nadu SSLC March 2017 (Not Yet Released </td>
+		<td>Tamil Nadu SSLC March 2017 (Not Yet Released) </td>
 	</tr>
 	<tr>
 		<td>Official Website</td>
@@ -148,7 +148,7 @@ td {
 <!-- </h4> -->
 <br><b>
 <h4>Steps to check the TN SSLC March 2017 Results: –</h4><br>
-<ul>
+<ol>
 <li>Go to the official website for TN SSLC Results 2017 (dge.tn.gov.in) or above Provided Links.</li>
 
 <li>Click on the link for TN SSLC Results 2017.</li>
@@ -156,7 +156,7 @@ td {
 <li>Enter your details/ hall ticket number in the fields provided.</li>
 
 <li>Download Results and Take Print Out For Further Use.</li>
-</ul></b>
+</ol></b>
 <br>
 <br><br>
 <div class="text-success">
