--- a/app/views/blogs/tnsslc.html.erb
+++ b/app/views/blogs/tnsslc.html.erb
@@ -74,7 +74,7 @@ Tamil Nadu SSLC March 2017 Examination Results expected on 19th May 2017 at 10:0
  </div>
  <br>
 
-</table>
+</table><br>
 <h3 class="text-center text-success">Tamil Nadu SSLC Results 2017 | TN SSLC Name Wise Results 2017 @ tnresults.nic.in </h3>
 <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <ins class="adsbygoogle"
