--- a/app/views/blogs/ts_ecet_results.html.erb
+++ b/app/views/blogs/ts_ecet_results.html.erb
@@ -17,8 +17,8 @@ input[type=text] {
 <script>
 var myVar;
 function myFunction() {
-    document.getElementById('demo').innerHTML="RESULTS AVAILABLE SOON STAY TUNE WITH US AND TRY AGAIN"
-    // window.open("http://www.schools9.com/andhra/2017/polycet/andhrapradesh-polycet-results-2017-0505.htm");
+    document.getElementById('demo').innerHTML="RESULTS AVAILABLE NOW"
+    window.open("http://ecet.tsche.ac.in/RankCard/DownloadRankCard.aspx");
     myVar=setInterval(time, 3000);
     function time(){
         location.reload()
