--- a/app/views/blogs/ts_ecet_results.html.erb
+++ b/app/views/blogs/ts_ecet_results.html.erb
@@ -68,7 +68,7 @@ function myFunction() {
                     <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
-<a href="/ap-ecet-results"><h3>AP ECET RESULTS</h3></a>
+<!-- <a href="/ap-ecet-results"><h3>AP ECET RESULTS</h3></a> -->
  </div>
  <br>
 
