--- a/app/views/blogs/ts_ecet_results.html.erb
+++ b/app/views/blogs/ts_ecet_results.html.erb
@@ -19,10 +19,10 @@ var myVar;
 function myFunction() {
     document.getElementById('demo').innerHTML="RESULTS AVAILABLE NOW"
     window.open("http://ecet.tsche.ac.in/RankCard/DownloadRankCard.aspx");
-    myVar=setInterval(time, 3000);
-    function time(){
-        location.reload()
-    }
+    // myVar=setInterval(time, 3000);
+    // function time(){
+    //     location.reload()
+    // }
     
 }
 </script>
