--- a/app/views/blogs/ts_ecet_results.html.erb
+++ b/app/views/blogs/ts_ecet_results.html.erb
@@ -17,7 +17,7 @@ input[type=text] {
 <script>
 var myVar;
 function myFunction() {
-    document.getElementById('demo').innerHTML="RESULTS AVAILABLE ARE UPDATING"
+    document.getElementById('demo').innerHTML="RESULTS ARE UPDATING"
     // window.open("http://ecet.tsche.ac.in/RankCard/DownloadRankCard.aspx");
     myVar=setInterval(time, 3000);
     function time(){
