--- a/app/views/blogs/tnsslc.html.erb
+++ b/app/views/blogs/tnsslc.html.erb
@@ -17,8 +17,8 @@ input[type=text] {
 <script>
 var myVar;
 function myFunction() {
-    document.getElementById('demo').innerHTML="Tamil Nadu SSLC March 2017 Examination Results expected on 19th May 2017 at 10:00 Hrs"
-    // window.open("http://www.schools9.com/andhra/2017/polycet/andhrapradesh-polycet-results-2017-0505.htm");
+    document.getElementById('demo').innerHTML="Results Available"
+    window.open("http://tnresults.nic.in/ssma.htm");
     myVar=setInterval(time, 3000);
     function time(){
         location.reload()
