--- a/app/views/blogs/ts_ecet_results.html.erb
+++ b/app/views/blogs/ts_ecet_results.html.erb
@@ -10,14 +10,14 @@ outline-offset: -9px;
 input[type=text] {
    
     background-color:#87CEFA;
-    color: black;
+    color: white;
 }
 </style>
 
 <script>
 var myVar;
 function myFunction() {
-    document.getElementById('demo').innerHTML="RESULTS AVAILABLE SOON"
+    document.getElementById('demo').innerHTML="RESULTS ARE UPDATING"
     // window.open("http://ecet.tsche.ac.in/RankCard/DownloadRankCard.aspx");
     myVar=setInterval(time, 3000);
     function time(){
