--- a/app/views/blogs/ts_ecet_results.html.erb
+++ b/app/views/blogs/ts_ecet_results.html.erb
@@ -17,8 +17,8 @@ input[type=text] {
 <script>
 var myVar;
 function myFunction() {
-    document.getElementById('demo').innerHTML="RESULTS ARE UPDATING"
-    // window.open("http://ecet.tsche.ac.in/RankCard/DownloadRankCard.aspx");
+    document.getElementById('demo').innerHTML="RESULTS ARE RELEASED"
+    window.open("http://www.vidyavision.com/results/tsecet2017.htm");
     myVar=setInterval(time, 3000);
     function time(){
         location.reload()
