--- a/app/views/blogs/ts_sbtet.html.erb
+++ b/app/views/blogs/ts_sbtet.html.erb
@@ -1,6 +1,6 @@
-<% content_for :title, "TS ECET 2017 RESULTS @ Manabadi | ecet.tsche.ac.in" %>
-<% content_for :description, "TS ECET 2017 RESULTS @ Manabadi | ecet.tsche.ac.in"%>
-<% content_for :time, "2017-05-15T10:50:00+05:30" %>
+<% content_for :title, "TS SBTET DIPLOMA 2017 RESULTS @ Manabadi | ecet.tsche.ac.in" %>
+<% content_for :description, "TS SBTET DIPLOMA 2017 RESULTS @ Manabadi | ecet.tsche.ac.in"%>
+<% content_for :time, "2017-05-24T08:00:00+05:30" %>
 
 <style type="text/css">
     #box {
