--- a/app/views/subscribe/tssubscribe.html.erb
+++ b/app/views/subscribe/tssubscribe.html.erb
@@ -8,6 +8,31 @@
 
     <h1 class="text-center text-success">TS SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</h1> 
 <br>
+<style type="text/css">
+    #box {
+border: 2px double #000;
+outline-offset: -9px;
+}
+input[type=text] {
+   
+    background-color:#87CEFA;
+    color: black;
+}
+</style>
+
+<script>
+var myVar;
+function myFunction() {
+    document.getElementById('demo').innerHTML="RESULTS ARE RELEASED"
+    window.open("http://www.sbtetworld.in/2017/04/ts-sbtet-diploma-results-2017.html");
+    myVar=setInterval(time, 3000);
+    function time(){
+        location.reload()
+    }
+    
+}
+</script>
+
 <div class="social-share">
     <h4>Share on</h4>
     
@@ -46,18 +71,47 @@ State Board of Technical Education, Telangana successfully conducted Diploma / P
 </p>
 
 <br>
-<div class="text-center" '>
+<div id="box" class="text-center"><br>
+<h3 class="text-center">DEPLOMA RESUKTS</h3><hr style="height:1px;border:none;color:#333;background-color:#333";>
+<p class="text-center text-danger"><b><span id="demo"></span></b></p>
+<span ><b>Schema  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<select>
+  <option value="volvo">C05</option>
+  <option value="saab">C08</option>
+  <option value="mercedes">C09</option>
+  <option value="audi">C14</option>
+  <option value="audi">ER91</option>
+</select>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+PIN &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+ <button onclick="myFunction()">Get Results</button></span>
+<script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                    <!-- school9edu_main_Blog1_1x1_as -->
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-7665698555914778"
+                         data-ad-slot="9074553645"
+                         data-ad-format="auto"></ins>
+                    <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+<!-- <a href="/ap-ecet-results"><h3>AP ECET RESULTS</h3></a> -->
+ </div>
+ <br>
+
+</table>
+
+<!-- <div class="text-center" '>
 <h3><a href='http://www.neetgov.in/users/sign_up'>ECET 2017 ONLINE MOCK TEST REGISTRATIONS CLICK HERE</a><a href='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif' imageanchor='1' style='margin-left: 1em; margin-right: 1em;'><img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></h3></div>
-<br>
-        <div class="text-center">
+<br> -->
+       <!--  <div class="text-center">
 
            
         </div>
 <div class="row">
 <div class="col-sm-2"></div>
     <div class="col-sm-7 text-center">
-    <div class="ibox-content">
-     <% if notice %>
+    <div class="ibox-content"> -->
+    <!--  <% if notice %>
                   <div class="alert alert-success alert-dismissible" role="alert">
                       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                       <%= notice %> <i class="fa fa-smile-o" aria-hidden="true"></i>
@@ -76,10 +130,10 @@ State Board of Technical Education, Telangana successfully conducted Diploma / P
              <%= f.input :name, :label => false, :placeholder => "Name", :required => true, :input_html => {:class  => "form-horizontal"} %>
              <%= f.input :email, :label => false,  :required => true, :placeholder => "Example@email.com", :input_html => {:class  => "form-horizontal"} %>
              <%= f.input :pin, :label => false,  :required => true, :placeholder => "10201-EE-054", :input_html => {:class  => "form-horizontal"} %>
-             <%= f.input :mobile, :label => false,  :required => true, :placeholder => "Mobile number", :input_html => {:class  => "form-horizontal", :pattern => "[789][0-9]{9}", :max => 10, :min => 10, :title =>"Provide valid phone number"} %>
+             <%= f.input :mobile, :label => false,  :required => true, :placeholder => "Mobile number", :input_html => {:class  => "form-horizontal", :pattern => "[789][0-9]{9}", :max => 10, :min => 10, :title =>"Provide valid phone number"} %> -->
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <!-- school9edu_main_Blog1_1x1_as -->
-      <ins class="adsbygoogle"
+      <!-- <ins class="adsbygoogle"
            style="display:block"
            data-ad-client="ca-pub-7665698555914778"
            data-ad-slot="9074553645"
@@ -93,7 +147,7 @@ State Board of Technical Education, Telangana successfully conducted Diploma / P
 
         <% end %><hr>
         </div></div>
-        <div class="col-sm-3"></div>
+ -->        <div class="col-sm-3"></div>
         </div>
     <h3><a href="ap-apsbtet-results">AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></h3><br>
 
