--- a/app/views/blogs/adminmain.html.erb
+++ b/app/views/blogs/adminmain.html.erb
@@ -24,6 +24,9 @@
               <div class="panel-heading"><b>Latest Notifications</b></div>
               <div class="panel-body">
                 <ul>
+
+                  <li><a href="/ts-tssbtet-results">TS SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></li><br>
+                  
                   <li><a href="/ts-ecet-results">TS ECET RESULTS 2017<img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></li><br>
                   <li><a href="/ap-ecet-results">AP ECET RESULTS 2017<img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></li><br>
                   <li><a href="/tn-sslc-results">Tamil Nadu SSLC Results 2017 | TN SSLC Results 2017 @ tnresults.nic.in<img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></li><br>
