--- a/app/views/subscribe/tssubscribe.html.erb
+++ b/app/views/subscribe/tssubscribe.html.erb
@@ -157,7 +157,7 @@ PIN &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text">&nbsp;&nbsp;&nbsp;&nb
        <li>
       Organization / Board:  State Board of Technical Education & Training (SBTET) TS</li>
       <li>Category: TS SBTET Diploma Regular/ Supply Examinations 2017 [C16, C14, C09, ER91] Results</li>
-      <li>Status:  TS SBTET Diploma Results 2017 <i class="text-danger">(Not Yet Released)</i></li>
+      <li>Status:  TS SBTET Diploma Results 2017</li>
       <li>Official Website:  www.sbtet.telangana.gov.in</li>
       </b>
       </ul>
